--- a/opentslm/config_opentslm.yaml
+++ b/opentslm/config_opentslm.yaml
@@ -2,6 +2,6 @@
 # Hard-coded splits for psychotherapy dataset
 
 psychotherapy_splits:
-  train: ["I7EY", "S9LT", "P7AJ", "E2LC", "I8AW", "M7BS", "0000"]  # 58 interviews
-  val: ["G1BW"]  # 14 interviews
-  test: ["S0EO"]  # 10 interviews
+  train: ["I7EY", "S9LT", "P7AJ", "E2LC", "I8AW", "M7BS", "0000"]  #A total of 6435 speech turns, processing
+  val: ["G1BW"]  # 14 interviews, 1684 speech turns, during procesisng
+  test: ["S0EO"]  # 10 interviews, 1342 speech turns (during processing)
